[gd_scene load_steps=6 format=3 uid="uid://bm5mstefu26au"]

[ext_resource type="Script" path="res://options.gd" id="1_k4wnr"]
[ext_resource type="Texture2D" uid="uid://dt3x8cy8t1ebk" path="res://assets/buttons_and_setting_background/settings background.png" id="2_tt8sy"]
[ext_resource type="FontFile" uid="uid://dpogoydi7t2cl" path="res://assets/fonts/spyagency3_2.ttf" id="4_1676n"]
[ext_resource type="Texture2D" uid="uid://jkuqg5m053s3" path="res://assets/buttons_and_setting_background/button.png" id="5_pruwq"]
[ext_resource type="Texture2D" uid="uid://vom4wga2kxi8" path="res://assets/buttons_and_setting_background/button (highlight).png" id="6_uesy2"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4wnr")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="SettingsBackground" type="Sprite2D" parent="BackgroundColor"]
position = Vector2(959, 541)
texture = ExtResource("2_tt8sy")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.125
offset_left = -252.0
offset_right = 252.0
offset_bottom = 104.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="Container2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -320.0
offset_right = 357.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResSize" type="VBoxContainer" parent="Container2"]
layout_mode = 2

[node name="Label" type="Label" parent="Container2/ResSize"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 56
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Container2/ResSize"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_1676n")

[node name="CheckButton" type="CheckButton" parent="Container2"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 36
text = "Windowed"

[node name="BGAvol" type="VBoxContainer" parent="Container2"]
layout_mode = 2

[node name="Label2" type="Label" parent="Container2/BGAvol"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 56
text = "BGA Volume"

[node name="HSlider" type="HSlider" parent="Container2/BGAvol"]
layout_mode = 2
value = 100.0

[node name="SFXvol" type="VBoxContainer" parent="Container2"]
layout_mode = 2

[node name="Label3" type="Label" parent="Container2/SFXvol"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 56
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Container2/SFXvol"]
layout_mode = 2
value = 100.0

[node name="backtomain" type="TextureButton" parent="Container2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
action_mode = 0
texture_normal = ExtResource("5_pruwq")
texture_hover = ExtResource("6_uesy2")

[node name="Label" type="Label" parent="Container2/backtomain"]
offset_left = 33.5
offset_top = 26.0
offset_right = 622.5
offset_bottom = 109.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_1676n")
theme_override_font_sizes/font_size = 56
text = "Back To Menu"

[connection signal="item_selected" from="Container2/ResSize/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Container2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Container2/backtomain" to="." method="_on_backtomain_pressed"]
